fixed another bug where the officers highlight was not getting covered by the overlay

--- a/frontend/src/components/main/navbar.css
+++ b/frontend/src/components/main/navbar.css
@@ -5,9 +5,9 @@
     max-height: 137px;
     display: flex;
     align-items: center;
-    position: sticky;
+    /* position: sticky;
     -webkit-position: sticky;
-    top: 0;
+    top: 0; */
 }
 
 #logo-container {
