--- a/frontend/src/styles/officers.css
+++ b/frontend/src/styles/officers.css
@@ -11,7 +11,7 @@ body {
 
 .officers-header > h1 {
     align-self: center;
-    z-index: 2;
+    z-index: -1;
 }
 
 .officers-header > ul {
@@ -27,6 +27,7 @@ body {
     width: 230px;
     line-height: 1.6;
     background-color: #EAB03C;
+    z-index: -10;
 }
 
 .officer-group-toggle-container {
